--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+20180109   2018-01-12 (PERLANCAR)
+
+           - Update to data from CryptoCurrency::Catalog v20180109.
+
+
 20180106   2018-01-07 (PERLANCAR)
 
-        - First release.
+           - First release.
