--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+20180116   2018-01-16 (PERLANCAR)
+
+           - Update to data from CryptoCurrency::Catalog v20180116.
+
+
 20180109   2018-01-12 (PERLANCAR)
 
            - Update to data from CryptoCurrency::Catalog v20180109.
